--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -329,7 +329,7 @@
         </div>
 
         <button class="buy-btn">Buy Now</button>
-        <div class="notice">After clicking "Buy Now", you will be redirected to WhatsApp. Payments are completed via bank transfer.</div>
+        <div class="notice">Note: After clicking "Buy Now", you will be redirected to WhatsApp. Payments are completed via bank transfer.</div>
     </div>
 </div>
 
