--- a/index.html
+++ b/index.html
@@ -229,10 +229,11 @@
         <img src="src/main/resources/assets/logo/Transparent%20W-2.png" alt="Dionz Logo" />
       </a>
 
-      <div class="phone d-flex align-items-center">
+      <a href="https://wa.me/94767149543" target="_blank" class="phone d-flex align-items-center text-decoration-none">
         <img src="src/main/resources/assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
         <span>+94 76 714 9543</span>
-      </div>
+      </a>
+
     </div>
 
     <!-- Desktop View -->
@@ -257,10 +258,10 @@
 
       <!-- Right: Phone + WhatsApp -->
       <div class="d-flex align-items-center gap-3">
-        <div class="phone d-flex align-items-center">
+        <a href="https://wa.me/94767149543" target="_blank" class="phone d-flex align-items-center text-decoration-none">
           <img src="src/main/resources/assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
           <span>+94 76 714 9543</span>
-        </div>
+        </a>
 
         <a class="whatsapp-link" href="https://wa.me/94767149543" target="_blank">WhatsApp</a>
       </div>
