--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Item Details</title>
+    <link rel="icon" href="../../assets/logo/W.png" type="image/x-icon">
+
+    <title>Watch Details | Dionz</title>
+
     <style>
         * {
             box-sizing: border-box;
@@ -50,6 +53,34 @@
             75% { transform: translateX(-3px);}
             100% { transform: translateX(0);}
         }
+
+        .arrow-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(255, 255, 255, 0.7);
+            color: black;
+            border: none;
+            font-size: 28px;
+            padding: 10px 10px;
+            cursor: pointer;
+            transition: background-color 0.2s ease, transform 0.2s ease;
+            z-index: 10;
+        }
+
+        .arrow-btn:hover {
+            background-color: rgba(255, 255, 255, 0.9);
+        }
+
+        .arrow-btn.left {
+            left: 0;
+        }
+
+        .arrow-btn.right {
+            right: 0;
+        }
+
+
 
         .product-id {
             position: fixed;
@@ -127,7 +158,7 @@
 
         .description {
             font-size: 15px;
-            line-height: 1.5;
+            line-height: 1.3;
             color: #444;
         }
 
@@ -271,8 +302,9 @@
     <div>
         <div style="position: relative;">
             <img id="mainImage" src="../../assets/watches/1/watch 1 - 1.webp" alt="Main Watch" class="main-image" />
-            <button id="prevBtn" style="position: absolute; top: 50%; left: 0;">‹</button>
-            <button id="nextBtn" style="position: absolute; top: 50%; right: 0;">›</button>
+            <button id="prevBtn" class="arrow-btn left">‹</button>
+            <button id="nextBtn" class="arrow-btn right">›</button>
+
         </div>
     </div>
 
