--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -425,10 +425,10 @@
         const selectedColor = document.querySelector('.color-option.selected .color-label')?.textContent.trim() || "N/A";
         const qty = document.getElementById("qty").value;
 
-        const message = `Hello, I'm interested in purchasing the following item:%0A` +
-            `Product ID: ${productId}%0A` +
-            `Color: ${selectedColor}%0A` +
-            `Quantity: ${qty}`;
+        const message = `*Hello, I'm interested in purchasing the following item:*%0A%0A` +
+            `*Product ID:* ${productId}%0A` +
+            `*Color:* ${selectedColor}%0A` +
+            `*Quantity:* ${qty}`;
 
         const whatsappURL = `https://wa.me/${phone}?text=${message}`;
         window.open(whatsappURL, "_blank");
