--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -240,6 +240,8 @@
 
 <!-- Products Grid -->
 <div class="products-grid">
+
+  <!--WATCH 1-->
   <a href="src/main/resources/pages/watches/Watch-1.html?id=1" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
@@ -252,14 +254,15 @@
     </div>
   </a>
 
+  <!--WATCH 2-->
   <a href="src/main/resources/pages/watches/Watch-2.html?id=2" class="card-link">
     <div class="card">
-      <img src="src/main/resources/assets/watches/1/test.jpeg" alt="Women's Classic Watch">
-      <h4>Women's Classic Watch</h4>
+      <img src="src/main/resources/assets/watches/2/watch 2 - 1.webp" alt="Women's Classic Watch">
+      <h4>Trendy And Elegant Quartz Wristwatch</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">5,490</span>
-        <span class="original">6,990</span>
+        <span class="current">1,099.00</span>
+        <span class="original">1,391.37</span>
       </div>
     </div>
   </a>
