--- a/src/main/resources/pages/watches/Watch-2.html
+++ b/src/main/resources/pages/watches/Watch-2.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Item Details</title>
+    <link rel="icon" href="../../assets/logo/W.png" type="image/x-icon">
+
+    <title>Watch Details | Dionz</title>
+
     <style>
-        /* Reset */
         * {
             box-sizing: border-box;
         }
@@ -13,12 +15,12 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             color: #333;
+            position: relative;
         }
         a {
             text-decoration: none;
         }
 
-        /* Back button */
         .back-button {
             position: fixed;
             top: 20px;
@@ -52,7 +54,44 @@
             100% { transform: translateX(0);}
         }
 
-        /* Container grid */
+        .arrow-btn {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(255, 255, 255, 0.7);
+            color: black;
+            border: none;
+            font-size: 28px;
+            padding: 10px 10px;
+            cursor: pointer;
+            transition: background-color 0.2s ease, transform 0.2s ease;
+            z-index: 10;
+        }
+
+        .arrow-btn:hover {
+            background-color: rgba(255, 255, 255, 0.9);
+        }
+
+        .arrow-btn.left {
+            left: 0;
+        }
+
+        .arrow-btn.right {
+            right: 0;
+        }
+
+        .product-id {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background: #edcd84;
+            padding: 8px 12px;
+            border-radius: 6px;
+            font-weight: bold;
+            box-shadow: 0 0 8px rgba(0,0,0,0.15);
+            z-index: 100;
+        }
+
         .container {
             max-width: 1200px;
             margin: 60px auto 20px;
@@ -61,11 +100,10 @@
             gap: 40px;
         }
 
-        /* Left thumbnails column */
         .thumbs {
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 1px;
         }
         .thumbs img {
             width: 60px;
@@ -81,7 +119,6 @@
             border-color: #edcd84;
         }
 
-        /* Main image */
         .main-image {
             width: 100%;
             max-height: 600px;
@@ -90,80 +127,39 @@
             box-shadow: 0 6px 20px rgb(0 0 0 / 0.1);
         }
 
-        /* Right side details */
         .details {
             display: flex;
             flex-direction: column;
             gap: 20px;
         }
 
-        /* Breadcrumb */
-        .breadcrumb {
-            font-size: 14px;
-            color: #666;
-            margin-bottom: 12px;
-        }
-        .breadcrumb a {
-            color: #666;
-        }
-        .breadcrumb span {
-            margin: 0 5px;
-        }
-
-        /* Title */
         .title {
             font-weight: 700;
             font-size: 24px;
             line-height: 1.3;
         }
 
-        /* Price section */
         .price-section {
             font-size: 26px;
             font-weight: 700;
             display: flex;
             align-items: center;
             gap: 15px;
+            color: #c2a563;
         }
-        .price-section .discount {
-            color: #ff6600;
-            font-weight: 700;
-            font-size: 18px;
-            padding: 3px 8px;
-            border: 1.5px solid #ff6600;
-            border-radius: 4px;
-        }
+
         .price-section .original-price {
             color: #888;
             font-size: 18px;
             text-decoration: line-through;
         }
 
-        /* Shipping info */
-        .shipping-info {
-            background-color: #fdf6e3;
-            padding: 10px 15px;
-            border-radius: 6px;
-            font-size: 14px;
-            color: #444;
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-        .shipping-info svg {
-            fill: #2e7d32;
-            width: 20px;
-            height: 20px;
-        }
-
-        /* Description */
         .description {
             font-size: 15px;
-            line-height: 1.5;
+            line-height: 1.3;
             color: #444;
         }
 
-        /* Brand label */
         .brand-label {
             background-color: #d0d0d0;
             padding: 4px 8px;
@@ -174,29 +170,40 @@
             margin-top: 8px;
         }
 
-        /* Colors */
         .colors {
             display: flex;
             gap: 12px;
+            flex-wrap: wrap;
         }
-        .colors .color-option {
+
+        .color-option {
             border: 2px solid transparent;
             border-radius: 8px;
             padding: 4px;
             cursor: pointer;
             transition: border-color 0.3s ease;
+            text-align: center;
         }
-        .colors .color-option img {
+        .color-option:hover {
+            border: 1px solid black;
+        }
+        .color-option img {
             width: 60px;
             height: 60px;
             object-fit: contain;
             border-radius: 6px;
         }
-        .colors .color-option.selected {
+        .color-option.selected {
             border-color: #edcd84;
         }
 
-        /* Quantity selector */
+        .color-label {
+            font-size: 13px;
+            margin-top: 4px;
+            color: #333;
+            font-weight: 500;
+        }
+
         .quantity {
             margin-top: 20px;
             display: flex;
@@ -204,9 +211,7 @@
             gap: 10px;
             font-weight: 600;
         }
-        .quantity label {
-            font-size: 16px;
-        }
+
         .quantity select {
             padding: 6px 10px;
             font-size: 16px;
@@ -214,9 +219,8 @@
             border: 1.5px solid #ccc;
         }
 
-        /* Buy button */
         .buy-btn {
-            margin-top: 30px;
+            margin-top: 5px;
             background-color: #edcd84;
             border: none;
             border-radius: 6px;
@@ -232,16 +236,11 @@
             background-color: #c2a563;
         }
 
-        /* Responsive */
-        @media (max-width: 1024px) {
-            .container {
-                grid-template-columns: 50px 1fr 1fr;
-                gap: 30px;
-            }
-            .colors .color-option img {
-                width: 50px;
-                height: 50px;
-            }
+        .notice {
+            margin-top: 10px;
+            font-size: 12px;
+            color: #555;
+            font-style: italic;
         }
 
         @media (max-width: 700px) {
@@ -276,89 +275,72 @@
                 font-size: 20px;
             }
         }
-
-        @media (max-width: 400px) {
-            .back-button {
-                width: 28px !important;
-                height: 28px !important;
-                top: 15px !important;
-                left: 15px !important;
-            }
-            .price-section {
-                font-size: 20px;
-            }
-            .quantity select {
-                font-size: 14px;
-            }
-        }
     </style>
 </head>
 <body>
 
-<!-- Back Button -->
+<!-- Back and ID -->
 <a href="javascript:history.back()" class="back-button" aria-label="Go back">
     <img src="../../assets/imgs/back.png" alt="Back" />
 </a>
+<div class="product-id">ID: WM1066</div>
 
 <div class="container">
 
-    <!-- Left thumbnails -->
+    <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 1" class="active" />
-        <img src="../../assets/watches/1/test.jpeg" alt="Watch 2" />
-        <img src="../../assets/watches/1/watch 1 - 2.webp" alt="Watch 3" />
-        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 4" />
-        <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Watch 5" />
+        <img src="../../assets/watches/2/watch 2 - 1.webp" alt="Watch 1" class="active" />
+        <img src="../../assets/watches/2/watch 2 - 3.webp" alt="Watch 3" />
+        <img src="../../assets/watches/2/watch 2 - 6.webp" alt="Watch 5" />
+        <img src="../../assets/watches/2/watch 2 - 8.webp" alt="Watch 5" />
+        <img src="../../assets/watches/2/watch 2 - 5.webp" alt="Watch 5" />
+
+        <img src="../../assets/watches/2/watch 2 - 9.webp" alt="Watch 5" />
+        <img src="../../assets/watches/2/watch 2 - 7.webp" alt="Watch 5" />
+        <img src="../../assets/watches/2/watch 2 - 10.webp" alt="Watch 5" />
+
     </div>
 
-    <!-- Main Image -->
+    <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../assets/watches/1/watch 1 - 1.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../assets/watches/2/watch 2 - 1.webp" alt="Main Watch" class="main-image" />
+            <button id="prevBtn" class="arrow-btn left">‹</button>
+            <button id="nextBtn" class="arrow-btn right">›</button>
 
-            <!-- Left Arrow -->
-            <button id="prevBtn" style="position: absolute; top: 50%; left: 0; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; font-size: 24px; padding: 10px; cursor: pointer; border-top-right-radius: 5px; border-bottom-right-radius: 5px;">‹</button>
-
-            <!-- Right Arrow -->
-            <button id="nextBtn" style="position: absolute; top: 50%; right: 0; transform: translateY(-50%); background: rgba(0,0,0,0.5); color: white; border: none; font-size: 24px; padding: 10px; cursor: pointer; border-top-left-radius: 5px; border-bottom-left-radius: 5px;">›</button>
         </div>
     </div>
 
-    <!-- Details Section -->
+    <!-- Product Details -->
     <div class="details">
-
-        <h1 class="title">Binbond 's Casual Blue Skeleton Quartz Watch with Date Indicator</h1>
+        <h1 class="title">Binbond's Casual Blue Skeleton Quartz Watch with Date Indicator</h1>
 
         <div class="price-section">
-            <div>LKR 3450.00</div>
-            <div class="original-price">LKR 4,369.28</div>
+            <div id="price">LKR 1,099.00</div>
+            <div class="original-price" id="originalPrice">LKR 1,391.37</div>
         </div>
 
         <p class="description">
-            Binbond 's Casual Blue Skeleton Quartz Watch with Date Indicator, High Quality 30m, Lightweight Metal Band for Teens & Adults - Perfect for School, Sports, Holidays, Holiday Gift, Youthful Style, Durable Craftsship, Casual Attire, Modern Design, Precision Timekeeping, Stylish Timepiece, Student Accessory.
+            Binbond's Casual Blue Skeleton Quartz Watch with Date Indicator. High quality build, lightweight metal band. Great for school, sports, holidays, and casual wear.
         </p>
 
-        <div class="brand-label" aria-label="Brand">Brand: BINBOND</div>
+        <div class="brand-label">Brand: BINBOND</div>
 
+        <!-- Color Options with Price -->
         <div class="colors" id="colors">
-            <div class="color-option selected" tabindex="0" aria-label="White Steel Black Surface" role="button">
-                <img src="../../assets/watches/1/watch 1 - 1.webp" alt="Red" />
+            <div class="color-option selected" data-price="1,099" data-original="1391.37">
+                <img src="../../assets/watches/2/watch 2 - 2.webp" alt="White Steel Black Surface" />
+                <div class="color-label">Silver Blue</div>
             </div>
-            <div class="color-option" tabindex="0" aria-label="Blue Steel Blue Surface" role="button">
-                <img src="https://m.media-amazon.com/images/I/71t5LZ8Y8fL._UL1500_.jpg" alt="Blue" />
-            </div>
-            <div class="color-option" tabindex="0" aria-label="Golden strap and black dial" role="button">
-                <img src="../../assets/watches/1/test.jpeg" alt="Gold" />
-            </div>
-            <div class="color-option" tabindex="0" aria-label="Black Steel Rose Shell" role="button">
-                <img src="https://m.media-amazon.com/images/I/71cvwD2dHGL._UL1500_.jpg" alt="Black" />
+            <div class="color-option" data-price="1,099" data-original="1391.37">
+                <img src="../../assets/watches/2/watch 2 - 4.webp" alt="White Steel Black Surface" />
+                <div class="color-label">Silver White</div>
             </div>
         </div>
 
         <div class="quantity">
             <label for="qty">Qty:</label>
-            <select id="qty" name="qty" aria-label="Select quantity">
-                <!-- Dynamically generated 1–50 -->
+            <select id="qty" name="qty">
                 <script>
                     for (let i = 1; i <= 50; i++) {
                         document.write(`<option value="${i}">${i}</option>`);
@@ -367,76 +349,53 @@
             </select>
         </div>
 
-
-        <button class="buy-btn" aria-label="Buy now">Buy Now</button>
+        <div class="notice">Note: After clicking "Buy Now", you will be redirected to WhatsApp. Payments are completed via bank transfer.</div>
+        <button class="buy-btn" id="buyNowBtn">Buy Now</button>
 
     </div>
 </div>
 
+<!-- JavaScript -->
 <script>
-    // Gallery thumbnails to main image
     const thumbs = document.querySelectorAll('.thumbs img');
     const mainImage = document.getElementById('mainImage');
+    const colorOptions = document.querySelectorAll('.color-option');
+    const price = document.getElementById("price");
+    const originalPrice = document.getElementById("originalPrice");
 
-    thumbs.forEach(thumb => {
+    thumbs.forEach((thumb, index) => {
         thumb.addEventListener('click', () => {
-            // Remove active class from all thumbs
             thumbs.forEach(t => t.classList.remove('active'));
-            // Set clicked thumb active
             thumb.classList.add('active');
-            // Change main image src
             mainImage.src = thumb.src;
             mainImage.alt = thumb.alt;
         });
     });
 
-    // Color option click also changes main image and active states
-    const colorOptions = document.querySelectorAll('.color-option');
-    colorOptions.forEach((option, index) => {
+    colorOptions.forEach(option => {
         option.addEventListener('click', () => {
-            // Remove selected class from all
             colorOptions.forEach(o => o.classList.remove('selected'));
             option.classList.add('selected');
-            // Change main image to that color's image (same as color option image)
             const img = option.querySelector('img');
             mainImage.src = img.src;
             mainImage.alt = img.alt;
 
-            // Also update thumbnails to highlight that color's first image
             thumbs.forEach(t => t.classList.remove('active'));
-            // Optional: highlight first thumb that matches selected color (simplified here)
-            // Just highlight the thumb with same src
             thumbs.forEach(t => {
-                if (t.src === img.src) {
-                    t.classList.add('active');
-                }
+                if (t.src === img.src) t.classList.add('active');
             });
-        });
 
-        // Accessibility: allow keyboard selection with Enter or Space
-        option.addEventListener('keydown', e => {
-            if(e.key === "Enter" || e.key === " "){
-                e.preventDefault();
-                option.click();
-            }
+            price.textContent = `LKR ${option.dataset.price}.00`;
+            originalPrice.textContent = `LKR ${parseFloat(option.dataset.original).toFixed(2)}`;
         });
     });
-</script>
 
-<script>
-    // Arrows for navigating images
     let currentIndex = 0;
-
     const updateMainImage = (index) => {
-        const thumbsArray = Array.from(thumbs);
-        currentIndex = index;
-
         thumbs.forEach(t => t.classList.remove('active'));
-        const selectedThumb = thumbs[currentIndex];
-        selectedThumb.classList.add('active');
-
-        mainImage.src = selectedThumb.src;
-        mainImage.alt = selectedThumb.alt;
+        thumbs[index].classList.add('active');
+        mainImage.src = thumbs[index].src;
+        mainImage.alt = thumbs[index].alt;
     };
 
     document.getElementById("prevBtn").addEventListener("click", () => {
@@ -449,12 +408,21 @@
         updateMainImage(currentIndex);
     });
 
-    // When clicking a thumbnail manually
-    thumbs.forEach((thumb, index) => {
-        thumb.addEventListener('click', () => {
-            currentIndex = index;
-            updateMainImage(currentIndex);
-        });
+    // Simplified Buy Now button - just open WhatsApp
+    document.getElementById("buyNowBtn").addEventListener("click", () => {
+        const phone = "94767149543"; // Your WhatsApp number
+
+        const productId = document.querySelector('.product-id').textContent.trim().replace('ID: ', '');
+        const selectedColor = document.querySelector('.color-option.selected .color-label')?.textContent.trim() || "N/A";
+        const qty = document.getElementById("qty").value;
+
+        const message = `*Hello, I'm interested in purchasing the following item:*%0A%0A` +
+            `*Product ID:* ${productId}%0A` +
+            `*Color:* ${selectedColor}%0A` +
+            `*Quantity:* ${qty}`;
+
+        const whatsappURL = `https://wa.me/${phone}?text=${message}`;
+        window.open(whatsappURL, "_blank");
     });
 
 </script>
