--- a/src/main/resources/pages/watches/Watch-2.html
+++ b/src/main/resources/pages/watches/Watch-2.html
@@ -313,7 +313,7 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">Binbond's Casual Blue Skeleton Quartz Watch with Date Indicator</h1>
+        <h1 class="title">Trendy And Elegant Quartz Wristwatch</h1>
 
         <div class="price-section">
             <div id="price">LKR 1,099.00</div>
@@ -321,10 +321,8 @@
         </div>
 
         <p class="description">
-            Binbond's Casual Blue Skeleton Quartz Watch with Date Indicator. High quality build, lightweight metal band. Great for school, sports, holidays, and casual wear.
+            Watch with a Versatile And Minimalist Design Featuring a Classic Dial with Numeric Markers, Embodying a Trendy And Elegant Quartz Wristwatch
         </p>
-
-        <div class="brand-label">Brand: BINBOND</div>
 
         <!-- Color Options with Price -->
         <div class="colors" id="colors">
@@ -356,76 +354,7 @@
 </div>
 
 <!-- JavaScript -->
-<script>
-    const thumbs = document.querySelectorAll('.thumbs img');
-    const mainImage = document.getElementById('mainImage');
-    const colorOptions = document.querySelectorAll('.color-option');
-    const price = document.getElementById("price");
-    const originalPrice = document.getElementById("originalPrice");
-
-    thumbs.forEach((thumb, index) => {
-        thumb.addEventListener('click', () => {
-            thumbs.forEach(t => t.classList.remove('active'));
-            thumb.classList.add('active');
-            mainImage.src = thumb.src;
-            mainImage.alt = thumb.alt;
-        });
-    });
-
-    colorOptions.forEach(option => {
-        option.addEventListener('click', () => {
-            colorOptions.forEach(o => o.classList.remove('selected'));
-            option.classList.add('selected');
-            const img = option.querySelector('img');
-            mainImage.src = img.src;
-            mainImage.alt = img.alt;
-
-            thumbs.forEach(t => t.classList.remove('active'));
-            thumbs.forEach(t => {
-                if (t.src === img.src) t.classList.add('active');
-            });
-
-            price.textContent = `LKR ${option.dataset.price}.00`;
-            originalPrice.textContent = `LKR ${parseFloat(option.dataset.original).toFixed(2)}`;
-        });
-    });
-
-    let currentIndex = 0;
-    const updateMainImage = (index) => {
-        thumbs.forEach(t => t.classList.remove('active'));
-        thumbs[index].classList.add('active');
-        mainImage.src = thumbs[index].src;
-        mainImage.alt = thumbs[index].alt;
-    };
-
-    document.getElementById("prevBtn").addEventListener("click", () => {
-        currentIndex = (currentIndex - 1 + thumbs.length) % thumbs.length;
-        updateMainImage(currentIndex);
-    });
-
-    document.getElementById("nextBtn").addEventListener("click", () => {
-        currentIndex = (currentIndex + 1) % thumbs.length;
-        updateMainImage(currentIndex);
-    });
-
-    // Simplified Buy Now button - just open WhatsApp
-    document.getElementById("buyNowBtn").addEventListener("click", () => {
-        const phone = "94767149543"; // Your WhatsApp number
-
-        const productId = document.querySelector('.product-id').textContent.trim().replace('ID: ', '');
-        const selectedColor = document.querySelector('.color-option.selected .color-label')?.textContent.trim() || "N/A";
-        const qty = document.getElementById("qty").value;
-
-        const message = `*Hello, I'm interested in purchasing the following item:*%0A%0A` +
-            `*Product ID:* ${productId}%0A` +
-            `*Color:* ${selectedColor}%0A` +
-            `*Quantity:* ${qty}`;
-
-        const whatsappURL = `https://wa.me/${phone}?text=${message}`;
-        window.open(whatsappURL, "_blank");
-    });
-
-</script>
+<script src="../../js/js.js"></script>
 
 </body>
 </html>
