--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -116,6 +116,14 @@
       padding: 0 1rem 2rem;
     }
 
+    @media (min-width: 1024px) {
+      .products-grid {
+        grid-template-columns: repeat(5, 1fr);
+      }
+    }
+
+
+
     .card-link {
       text-decoration: none;
       color: inherit;
@@ -266,6 +274,33 @@
       </div>
     </div>
   </a>
+
+  <!--WATCH 2-->
+  <a href="src/main/resources/pages/watches/Watch-2.html?id=2" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/watches/2/watch 2 - 1.webp" alt="Women's Classic Watch">
+      <h4>Trendy And Elegant Quartz Wristwatch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">1,099.00</span>
+        <span class="original">1,391.37</span>
+      </div>
+    </div>
+  </a>
+
+  <!--WATCH 2-->
+  <a href="src/main/resources/pages/watches/Watch-2.html?id=2" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/watches/2/watch 2 - 1.webp" alt="Women's Classic Watch">
+      <h4>Trendy And Elegant Quartz Wristwatch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">1,099.00</span>
+        <span class="original">1,391.37</span>
+      </div>
+    </div>
+  </a>
+
 
   <a href="watches/Watch-1.html?id=3" class="card-link">
     <div class="card">
