--- a/index.html
+++ b/index.html
@@ -20,20 +20,27 @@
       --white: #fff;
     }
 
+    /* reserve space for the fixed navbar so content isn't hidden */
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--white);
+      padding-top: 88px; /* ≈ navbar height on desktop */
     }
 
+    /* fixed navbar */
     .navbar {
       background-color: var(--black);
       padding: 1rem 1.2rem;
-      position: relative;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
       overflow: hidden;
-      z-index: 10;
+      z-index: 1000; /* sit above page content */
     }
 
+    /* decorative shapes */
     .navbar::after {
       content: "";
       position: absolute;
@@ -85,9 +92,7 @@
       z-index: 2;
     }
 
-    .nav-link:hover {
-      color: var(--gold) !important;
-    }
+    .nav-link:hover { color: var(--gold) !important; }
 
     .phone {
       color: var(--gold);
@@ -97,12 +102,7 @@
       gap: 6px;
       z-index: 2;
     }
-
-    .phone img {
-      width: 18px;
-      height: 18px;
-      object-fit: contain;
-    }
+    .phone img { width: 18px; height: 18px; object-fit: contain; }
 
     .whatsapp-link {
       color: var(--gold);
@@ -118,11 +118,7 @@
       transition: 0.3s;
       z-index: 2;
     }
-
-    .whatsapp-link:hover {
-      background-color: var(--gold);
-      color: var(--black);
-    }
+    .whatsapp-link:hover { background-color: var(--gold); color: var(--black); }
 
     .dropdown-menu {
       background-color: var(--white);
@@ -132,41 +128,22 @@
       animation: fadeSlide 0.2s ease;
       z-index: 9999;
     }
-
-    .dropdown-menu .dropdown-item {
-      color: var(--black);
-      font-weight: 400;
-    }
-
-    .dropdown-menu .dropdown-item:hover {
-      background-color: var(--gold-light);
-      color: var(--black);
-    }
+    .dropdown-menu .dropdown-item { color: var(--black); font-weight: 400; }
+    .dropdown-menu .dropdown-item:hover { background-color: var(--gold-light); color: var(--black); }
 
     @keyframes fadeSlide {
-      0% {
-        opacity: 0;
-        transform: translateY(-5px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      0% { opacity: 0; transform: translateY(-5px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
-    .navbar-nav {
-      gap: 1.5rem;
-    }
+    .navbar-nav { gap: 1.5rem; }
 
     @media (max-width: 991px) {
-      .navbar {
-        padding: 0.6rem 1rem;
-      }
+      body { padding-top: 72px; } /* adjust for smaller navbar on mobile */
 
+      .navbar { padding: 0.6rem 1rem; }
       .navbar-nav,
-      .whatsapp-link {
-        display: none !important;
-      }
+      .whatsapp-link { display: none !important; }
 
       .top-row {
         display: flex;
@@ -196,7 +173,6 @@
         <img src="src/main/resources/assets/imgs/whatsapp.png" alt="WhatsApp Icon" />
         <span>+94 76 714 9543</span>
       </a>
-
     </div>
 
     <!-- Desktop View -->
@@ -208,9 +184,7 @@
         </a>
 
         <ul class="navbar-nav d-flex align-items-center gap-3 mb-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
         </ul>
       </div>
 
@@ -232,15 +206,15 @@
 <main id="dynamicContent"></main>
 
 <script>
-  window.addEventListener("DOMContentLoaded", () => {
-    fetch("src/main/resources/pages/dashboard.html")
+  window.addEventListener('DOMContentLoaded', () => {
+    fetch('src/main/resources/pages/dashboard.html')
             .then(response => response.text())
             .then(html => {
-              document.getElementById("dynamicContent").innerHTML = html;
+              document.getElementById('dynamicContent').innerHTML = html;
             })
             .catch(error => {
-              document.getElementById("dynamicContent").innerHTML = "<p>Failed to load dashboard.</p>";
-              console.error("Error loading dashboard:", error);
+              document.getElementById('dynamicContent').innerHTML = '<p>Failed to load dashboard.</p>';
+              console.error('Error loading dashboard:', error);
             });
   });
 </script>
