--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
+  <!-- Bootstrap-icons (for social icons in the footer) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet"/>
+
   <style>
     :root {
       --gold: #edcd84;
@@ -26,6 +29,9 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--white);
       padding-top: 88px; /* ≈ navbar height on desktop */
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     /* fixed navbar */
@@ -152,8 +158,60 @@
       }
     }
 
-    /*  ----------------------------------------------------------------------------------*/
+    /* ------------------- FOOTER ------------------- */
+    footer {
+      background-color: var(--black);
+      color: var(--white);
+      padding: 3rem 0 1.5rem;
+      font-size: 0.9rem;
+      margin-top: auto; /* push footer to bottom when content is short */
+    }
 
+    footer h6 {
+      font-size: 1rem;
+      color: var(--gold);
+      margin-bottom: 1rem;
+      letter-spacing: 0.5px;
+    }
+
+    footer a {
+      color: var(--white);
+      text-decoration: none;
+      transition: 0.3s;
+    }
+    footer a:hover {
+      color: var(--gold);
+      text-decoration: underline;
+    }
+
+    .social-links a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      border: 1px solid var(--gold);
+      border-radius: 50%;
+      margin-right: 8px;
+      font-size: 1.1rem;
+      transition: 0.3s;
+    }
+    .social-links a:hover {
+      background-color: var(--gold);
+      color: var(--black);
+    }
+
+    .footer-bottom {
+      border-top: 1px solid #222;
+      margin-top: 2rem;
+      padding-top: 1rem;
+      text-align: center;
+      font-size: 0.85rem;
+    }
+
+    @media (max-width: 767px) {
+      footer .col-6:not(:last-child) { margin-bottom: 2rem; }
+    }
   </style>
 
 </head>
@@ -204,6 +262,53 @@
 
 <!-- Dynamic main section -->
 <main id="dynamicContent"></main>
+
+<!-- PROFESSIONAL BLACK FOOTER -->
+<footer>
+  <div class="container">
+    <div class="row text-center text-md-start">
+      <!-- Brand & About -->
+      <div class="col-12 col-md-4 col-lg-3 mb-4 mb-md-0">
+        <img src="src/main/resources/assets/logo/Transparent%20W-2.png"
+             alt="Dionz Logo" style="height:40px;">
+        <p class="mt-3">Your one-stop destination for premium watches, accessories and unparalleled service.</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-6 col-md-4 col-lg-3">
+        <h6>Quick Links</h6>
+        <ul class="list-unstyled">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Contact -->
+      <div class="col-6 col-md-4 col-lg-3">
+        <h6>Contact</h6>
+        <p class="mb-1">Sri Lanka</p>
+        <p class="mb-1">Phone: +94 76 714 9543</p>
+        <p>Email: dionzofficial01@gmail.com</p>
+      </div>
+
+      <!-- Social -->
+      <div class="col-12 col-md-12 col-lg-3 mt-4 mt-lg-0">
+        <h6>Follow Us</h6>
+        <div class="social-links">
+          <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-bottom">
+      © <script>document.write(new Date().getFullYear())</script> Dionz. All rights reserved.
+    </div>
+  </div>
+</footer>
 
 <script>
   window.addEventListener('DOMContentLoaded', () => {
