--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -7,275 +7,8 @@
 
     <title>Watch Details | Dionz</title>
 
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            color: #333;
-            position: relative;
-        }
-        a {
-            text-decoration: none;
-        }
+    <link rel="stylesheet" href="../../css/watch.css" />
 
-        .back-button {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            width: 35px;
-            height: 35px;
-            border-radius: 50%;
-            background-color: #edcd84;
-            padding: 6px;
-            cursor: pointer;
-            transition: box-shadow 0.3s ease;
-            z-index: 100;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .back-button:hover {
-            box-shadow: 0 0 10px 4px #c2a563;
-            animation: shake 0.4s ease-in-out;
-        }
-        .back-button img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-        @keyframes shake {
-            0% { transform: translateX(0);}
-            25% { transform: translateX(-3px);}
-            50% { transform: translateX(3px);}
-            75% { transform: translateX(-3px);}
-            100% { transform: translateX(0);}
-        }
-
-        .arrow-btn {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: rgba(255, 255, 255, 0.7);
-            color: black;
-            border: none;
-            font-size: 28px;
-            padding: 10px 10px;
-            cursor: pointer;
-            transition: background-color 0.2s ease, transform 0.2s ease;
-            z-index: 10;
-        }
-
-        .arrow-btn:hover {
-            background-color: rgba(255, 255, 255, 0.9);
-        }
-
-        .arrow-btn.left {
-            left: 0;
-        }
-
-        .arrow-btn.right {
-            right: 0;
-        }
-
-        .product-id {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: #edcd84;
-            padding: 8px 12px;
-            border-radius: 6px;
-            font-weight: bold;
-            box-shadow: 0 0 8px rgba(0,0,0,0.15);
-            z-index: 100;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 60px auto 20px;
-            display: grid;
-            grid-template-columns: 60px 1fr 1.2fr;
-            gap: 40px;
-        }
-
-        .thumbs {
-            display: flex;
-            flex-direction: column;
-            gap: 1px;
-        }
-        .thumbs img {
-            width: 60px;
-            height: 60px;
-            object-fit: contain;
-            border: 2px solid transparent;
-            cursor: pointer;
-            border-radius: 6px;
-            transition: border-color 0.3s ease;
-        }
-        .thumbs img.active,
-        .thumbs img:hover {
-            border-color: #edcd84;
-        }
-
-        .main-image {
-            width: 100%;
-            max-height: 600px;
-            object-fit: contain;
-            border-radius: 10px;
-            box-shadow: 0 6px 20px rgb(0 0 0 / 0.1);
-        }
-
-        .details {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .title {
-            font-weight: 700;
-            font-size: 24px;
-            line-height: 1.3;
-        }
-
-        .price-section {
-            font-size: 26px;
-            font-weight: 700;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            color: #c2a563;
-        }
-
-        .price-section .original-price {
-            color: #888;
-            font-size: 18px;
-            text-decoration: line-through;
-        }
-
-        .description {
-            font-size: 15px;
-            line-height: 1.3;
-            color: #444;
-        }
-
-        .brand-label {
-            background-color: #d0d0d0;
-            padding: 4px 8px;
-            border-radius: 3px;
-            font-weight: 700;
-            display: inline-block;
-            font-size: 14px;
-            margin-top: 8px;
-        }
-
-        .colors {
-            display: flex;
-            gap: 12px;
-            flex-wrap: wrap;
-        }
-
-        .color-option {
-            border: 2px solid transparent;
-            border-radius: 8px;
-            padding: 4px;
-            cursor: pointer;
-            transition: border-color 0.3s ease;
-            text-align: center;
-        }
-        .color-option:hover {
-            border: 1px solid black;
-        }
-        .color-option img {
-            width: 60px;
-            height: 60px;
-            object-fit: contain;
-            border-radius: 6px;
-        }
-        .color-option.selected {
-            border-color: #edcd84;
-        }
-
-        .color-label {
-            font-size: 13px;
-            margin-top: 4px;
-            color: #333;
-            font-weight: 500;
-        }
-
-        .quantity {
-            margin-top: 20px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-weight: 600;
-        }
-
-        .quantity select {
-            padding: 6px 10px;
-            font-size: 16px;
-            border-radius: 6px;
-            border: 1.5px solid #ccc;
-        }
-
-        .buy-btn {
-            margin-top: 5px;
-            background-color: #edcd84;
-            border: none;
-            border-radius: 6px;
-            padding: 14px 0;
-            font-weight: 700;
-            font-size: 18px;
-            color: #333;
-            cursor: pointer;
-            box-shadow: 0 4px 10px rgb(237 205 132 / 0.7);
-            transition: background-color 0.3s ease;
-        }
-        .buy-btn:hover {
-            background-color: #c2a563;
-        }
-
-        .notice {
-            margin-top: 10px;
-            font-size: 12px;
-            color: #555;
-            font-style: italic;
-        }
-
-        @media (max-width: 700px) {
-            .container {
-                grid-template-columns: 1fr;
-                gap: 30px;
-                margin-top: 100px;
-            }
-            .thumbs {
-                flex-direction: row;
-                justify-content: center;
-                overflow-x: auto;
-            }
-            .thumbs img {
-                width: 50px;
-                height: 50px;
-                margin-right: 10px;
-            }
-            .main-image {
-                max-height: 400px;
-                margin: 0 auto;
-                display: block;
-            }
-            .details {
-                gap: 15px;
-            }
-            .colors {
-                justify-content: center;
-            }
-            .buy-btn {
-                width: 100%;
-                font-size: 20px;
-            }
-        }
-    </style>
 </head>
 <body>
 
