--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -4,217 +4,9 @@
   <meta charset="UTF-8">
   <title>Dionz | Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    :root {
-      --gold: #edcd84;
-      --dark-gold: #c2a563;
-      --black: #000;
-      --white: #fff;
-      --gray: #888;
-    }
 
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-    }
+  <link rel="stylesheet" href="src/main/resources/css/dashboard.css" />
 
-    h2 {
-      text-align: center;
-      color: var(--black);
-      margin: 1rem 0;
-      font-size: 1.4rem;
-    }
-
-    /* Categories Section */
-    .categories-section {
-      padding: 1rem 1.5rem;
-      background-color: #edcd84;
-
-    }
-
-    .categories-wrapper {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    .categories-flex {
-      display: flex;
-      flex-wrap: nowrap;
-      gap: 1rem;
-      flex: 1;
-    }
-
-    .category-item span {
-      color: var(--black);
-      font-weight: 400;
-      font-size: 0.75rem;
-      white-space: nowrap;
-      cursor: pointer;
-    }
-
-    .sort-wrapper {
-      flex-shrink: 0;
-    }
-
-    @media (max-width: 768px) {
-      .categories-wrapper {
-        flex-direction: column;
-        align-items: center;
-        gap: 0.8rem;
-      }
-
-      .categories-flex {
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 0.6rem;
-      }
-
-      .category-item span {
-        font-size: 0.7rem; /* Smaller font for categories */
-      }
-
-      .sort-wrapper {
-        align-self: flex-end;
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-      }
-
-      .sort-wrapper select {
-        font-size: 0.65rem;
-        padding: 0.15rem 0.3rem;
-        border-radius: 16px;
-      }
-    }
-
-
-    @media (min-width: 769px) {
-      .categories-section {
-        padding: 0.5rem 1.5rem;
-      }
-
-      .category-item span {
-        font-size: 0.9rem;
-        font-weight: 400;
-      }
-
-      .sort-wrapper select {
-        padding: 0.2rem 0.8rem;
-        font-size: 0.8rem;
-      }
-    }
-
-
-    /* Products Grid */
-    .products-grid {
-      display: grid;
-      gap: 1rem;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      padding: 0 1rem 2rem;
-    }
-
-    @media (min-width: 1024px) {
-      .products-grid {
-        grid-template-columns: repeat(5, 1fr);
-      }
-    }
-
-
-
-    .card-link {
-      text-decoration: none;
-      color: inherit;
-      display: block;
-    }
-
-    .card {
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
-      overflow: hidden;
-      transition: transform 0.2s;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      padding: 0.8rem;
-      cursor: pointer;
-      height: 100%;
-    }
-
-    .card:hover {
-      transform: translateY(-4px);
-    }
-
-    .card img {
-      width: 100%;
-      aspect-ratio: 1/1;
-      object-fit: cover;
-      border-radius: 6px;
-      margin-bottom: 0.6rem;
-    }
-
-    .card h4 {
-      font-size: 0.65rem;
-      color: #7a7a7a;
-      margin: 0 0 0.3rem;
-      font-weight: 400;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      min-height: 2.2em;
-    }
-
-    .price {
-      display: flex;
-      align-items: baseline;
-      gap: 4px;
-      flex-wrap: nowrap;
-      justify-content: center;
-      white-space: nowrap;
-    }
-
-    .price .currency {
-      font-size: 0.75rem;
-      color: var(--black);
-    }
-
-    .price .current {
-      font-size: 0.95rem;
-      font-weight: bold;
-      color: var(--dark-gold);
-    }
-
-    .price .original {
-      font-size: 0.7rem;
-      text-decoration: line-through;
-      color: var(--gray);
-    }
-
-    @media (max-width: 480px) {
-      .card {
-        padding: 0.6rem;
-      }
-
-      .card h4 {
-        font-size: 0.6rem;
-        -webkit-line-clamp: 2;
-      }
-
-      .price .current {
-        font-size: 0.9rem;
-      }
-
-      .price .original {
-        font-size: 0.65rem;
-      }
-    }
-  </style>
 </head>
 <body>
 
@@ -338,6 +130,7 @@
     </div>
   </a>
 </div>
+
 
 </body>
 </html>
