--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -26,14 +26,14 @@
     </div>
 
     <!-- Sort Dropdown -->
-    <div class="sort-wrapper">
-      <select id="sortDropdown" class="form-select form-select-sm" style="width: auto; border-radius: 20px; border: 1px solid var(--black); background-color: var(--white); color: var(--black); padding: 0.2rem 1rem;">
+    <!--<div class="sort-wrapper">
+      <select id="sortDropdown" class="form-select form-select-sm" style="width: auto; border-radius: 20px; border: 1px solid var(&#45;&#45;black); background-color: var(&#45;&#45;white); color: var(&#45;&#45;black); padding: 0.2rem 1rem;">
         <option selected disabled>Sort by</option>
         <option value="relevance">Relevance</option>
         <option value="low-to-high">Price: Low to High</option>
         <option value="high-to-low">Price: High to Low</option>
       </select>
-    </div>
+    </div>-->
   </div>
 </section>
 
