--- a/src/main/resources/pages/men.html
+++ b/src/main/resources/pages/men.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Men | Dionz</title>
+    <title>Mens | Dionx</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" href="../../resources/css/dashboard.css" />
+    <link rel="stylesheet" href="../css/watch.css" />
+
+    <style>
+        body {
+            margin: 0;
+            padding-top: 30px;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+    </style>
+
 </head>
 <body>
+
+<a href="javascript:history.back()" class="back-button" aria-label="Go back">
+    <img src="../assets/imgs/back.png" alt="Back" />
+</a>
+
+<!-- Title -->
+<h2>Mens Watches</h2>
+
+<!-- Products Grid -->
+<div class="products-grid">
+
+    <!--WATCH 1-->
+    <a href="../../resources/pages/watches/Watch-1.html?id=1" class="card-link">
+        <div class="card">
+            <img src="../../resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
+            <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">3,400.00</span>
+                <span class="original">4,369.28</span>
+            </div>
+        </div>
+    </a>
+
+    <!--WATCH 2-->
+    <a href="../../resources/pages/watches/Watch-2.html?id=2" class="card-link">
+        <div class="card">
+            <img src="../../resources/assets/watches/2/watch 2 - 1.webp" alt="Women's Classic Watch">
+            <h4>Trendy And Elegant Quartz Wristwatch</h4>
+            <div class="price">
+                <span class="currency">LKR</span>
+                <span class="current">1,099.00</span>
+                <span class="original">1,391.37</span>
+            </div>
+        </div>
+    </a>
+
+</div>
 
 </body>
 </html>
